src/index.css
body {
  background: #000000;
  color: white;
}

.container {
  margin-top: 20px;
  display: flex;
  margin-left: auto;
  margin-right: auto;  
  width: 100%;
  }

@media only screen and (min-width: 600px) {
  .container {
    width: 280px;
  }
}

input {
  border: 1px #f0e995 solid;
  background: none;
  color: #f0e995;
  padding: 10px;
}

input + button {
  border-right: none; 
}

button {
  border: 1px #f0e995 solid;
  background: white;
  color: #333;
  padding: 10px;  
  border-left: none;
}

button:hover {
  background: #333;
  color: white;
  border-left: none;
}

.form {
  width: 100%;
}

.item {
  margin-top: 10px;
  background: #fee851;
  color: #333;
  padding: 10px;
  word-wrap: break-word; 
  width: inherit; 
  border-radius: 3%;
}

.item:hover {
  background: #fffc81;
}

.close {
  display: inline;
  float: right;
  font-size: 9px;
  padding: 5px;
  border-radius: 5%;
}

.close:hover {
  background: #ee573d; 
  cursor: pointer;
}

